--- a/turismo.html
+++ b/turismo.html
@@ -10,21 +10,10 @@
 
     <title>COOMUSTRANSTUR</title>
 
-    <link rel="stylesheet" href="css/featherlight.min.css">
+    <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
+    <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css">
 </head>
-
-<style>
-    img.lazy {
-        width: 700px; 
-        height: 467px; 
-        display: block;
-
-        background-image: url("../img/load.gif");
-        background-repeat: no-repeat;
-        background-position: 50% 50%;
-    }
-</style>
 
 <body class="turismo">
     <!-- INDEX -->
@@ -119,6 +108,10 @@
                                 <img src="img/turismo/los sabalos/WP_20140521_003.jpg" alt="" srcset="" class="img_adaptada lazy">
                                 <img src="img/turismo/los sabalos/WP_20140521_004.jpg" alt="" srcset="" class="img_adaptada lazy">
 
+                                <section data-featherlight-gallery data-featherlight-filter="a">
+                                    <a href="img/turismo/"><img class="img_adaptada lazy" src="img/turismo/"></a>
+                                </section>
+
                             </div>
                         </div>
                     </div>
@@ -135,6 +128,10 @@
                             <img src="img/turismo/cascada la ventiadora/IMG-20180906-WA0018.jpg" alt="" srcset="" class="img_adaptada lazy">
                             <img src="img/turismo/cascada la ventiadora/IMG-20180926-WA0062.jpg" alt="" srcset="" class="img_adaptada lazy">
                             <img src="img/turismo/cascada la ventiadora/IMG-20180926-WA0118.jpg" alt="" srcset="" class="img_adaptada lazy">
+
+                            <section data-featherlight-gallery data-featherlight-filter="a">
+                                <a href="img/turismo/"><img class="img_adaptada lazy" src="img/turismo/"></a>
+                            </section>
 
                         </div>
                     </div>
@@ -153,6 +150,10 @@
                             <img src="img/turismo/charco oscuro/WP_20140521_043.jpg" alt="" srcset="" class="img_adaptada lazy">
                             <img src="img/turismo/charco oscuro/WP_20181012_027.jpg" alt="" srcset="" class="img_adaptada lazy">
 
+                            <section data-featherlight-gallery data-featherlight-filter="a">
+                                <a href="img/turismo/"><img class="img_adaptada lazy" src="img/turismo/"></a>
+                            </section>
+
                         </div>
                     </div>
                 </div>
@@ -169,6 +170,10 @@
                             <img src="img/turismo/la conferencia/WP_20140521_028.jpg" alt="" srcset="" class="img_adaptada lazy">
                             <img src="img/turismo/la conferencia/WP_20140521_014.jpg" alt="" srcset="" class="img_adaptada lazy">
                             <img src="img/turismo/la conferencia/DSC01306.JPG" alt="" srcset="" class="img_adaptada lazy">
+
+                            <section data-featherlight-gallery data-featherlight-filter="a">
+                                <a href="img/turismo/"><img class="img_adaptada lazy" src="img/turismo/"></a>
+                            </section>
 
                         </div>
                     </div>
@@ -187,6 +192,10 @@
                             <img src="img/turismo/la platina/WP_20181118_020.jpg" alt="" srcset="" class="img_adaptada lazy">
                             <img src="img/turismo/la platina/WP_20181118_021.jpg" alt="" srcset="" class="img_adaptada lazy">
 
+                            <section data-featherlight-gallery data-featherlight-filter="a">
+                                <a href="img/turismo/"><img class="img_adaptada lazy" src="img/turismo/"></a>
+                            </section>
+
                         </div>
                     </div>
                 </div>
@@ -196,14 +205,29 @@
             <div class="col text-center" id="contenido_turismo6">
                 <img src="img/turismo/TORTUGA.jpg" alt="" class="img-fluid mb-3">
                 <div class="row">
-                    <div class="col">
+                    <div class="col tarjeta1">
                         <div class="galery_container row d-flex justify-content-center">
 
-                            <img src="img/turismo/la tortuga/WP_20140521_029.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/la tortuga/WP_20140521_030.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/la tortuga/WP_20140521_033.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/la tortuga/WP_20140521_035.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/la tortuga/WP_20140521_039.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <section data-featherlight-gallery data-featherlight-filter="a">
+                                <a href="img/turismo/la tortuga/IMG_20180916_154728.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/IMG_20180916_154728.jpg"></a>
+                                <a href="img/turismo/la tortuga/IMG_20180916_154849.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/IMG_20180916_154849.jpg"></a>
+                                <a href="img/turismo/la tortuga/IMG_20180916_154930.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/IMG_20180916_154930.jpg"></a>
+                                <a href="img/turismo/la tortuga/IMG_20180916_155025.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/IMG_20180916_155025.jpg"></a>
+                                <a href="img/turismo/la tortuga/WP_20140521_029.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/WP_20140521_029.jpg"></a>
+                                <a href="img/turismo/la tortuga/WP_20140521_030.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/WP_20140521_030.jpg"></a>
+                                <a href="img/turismo/la tortuga/WP_20140521_031.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/WP_20140521_031.jpg"></a>
+                                <a href="img/turismo/la tortuga/WP_20140521_032.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/WP_20140521_032.jpg"></a>
+                                <a href="img/turismo/la tortuga/WP_20140521_033.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/WP_20140521_033.jpg"></a>
+                                <a href="img/turismo/la tortuga/WP_20140521_034.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/WP_20140521_034.jpg"></a>
+                                <a href="img/turismo/la tortuga/WP_20140521_035.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/WP_20140521_035.jpg"></a>
+                                <a href="img/turismo/la tortuga/WP_20140521_036.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/WP_20140521_036.jpg"></a>
+                                <a href="img/turismo/la tortuga/WP_20140521_037.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/WP_20140521_037.jpg"></a>
+                                <a href="img/turismo/la tortuga/WP_20140521_038.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/WP_20140521_038.jpg"></a>
+                                <a href="img/turismo/la tortuga/WP_20140521_039.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/WP_20140521_039.jpg"></a>
+                                <a href="img/turismo/la tortuga/WP_20140521_040.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/WP_20140521_040.jpg"></a>
+                                <a href="img/turismo/la tortuga/WP_20140521_041.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/WP_20140521_041.jpg"></a>
+                                <a href="img/turismo/la tortuga/WP_20140521_042.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/WP_20140521_042.jpg"></a>
+                            </section>
 
                         </div>
                     </div>
@@ -214,13 +238,15 @@
             <div class="col text-center" id="contenido_turismo7">
                 <img src="img/turismo/PEÑA.jpg" alt="" class="img-fluid mb-3">
                 <div class="row">
-                    <div class="col">
+                    <div class="col tarjeta1">
                         <div class="galery_container row d-flex justify-content-center">
 
-                            <img src="img/turismo/peña azul/WP_20181012_022.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/peña azul/WP_20181012_060.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/peña azul/WP_20181012_061.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/peña azul/WP_20181012_062.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <section data-featherlight-gallery data-featherlight-filter="a">
+                                <a href="img/turismo/peña azul/WP_20181012_022.jpg"><img class="img_adaptada lazy" src="img/turismo/peña azul/WP_20181012_022.jpg"></a>
+                                <a href="img/turismo/peña azul/WP_20181012_060.jpg"><img class="img_adaptada lazy" src="img/turismo/peña azul/WP_20181012_060.jpg"></a>
+                                <a href="img/turismo/peña azul/WP_20181012_061.jpg"><img class="img_adaptada lazy" src="img/turismo/peña azul/WP_20181012_061.jpg"></a>
+                                <a href="img/turismo/peña azul/WP_20181012_062.jpg"><img class="img_adaptada lazy" src="img/turismo/peña azul/WP_20181012_062.jpg"></a>
+                            </section>
 
                         </div>
                     </div>
@@ -231,14 +257,29 @@
             <div class="col text-center" id="contenido_turismo8">
                 <img src="img/turismo/TROMPA DIABLO.jpg" alt="" class="img-fluid mb-3">
                 <div class="row">
-                    <div class="col">
+                    <div class="col tarjeta1">
                         <div class="galery_container row d-flex justify-content-center">
 
-                            <img src="img/turismo/trompa del diablo/WP_20181012_021.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/trompa del diablo/WP_20181012_047.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/trompa del diablo/WP_20181012_055.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/trompa del diablo/WP_20181012_054.jpg" alt="" srcset="" class="img_adaptada lazy">
-
+                            <section data-featherlight-gallery data-featherlight-filter="a">
+                                <a href="img/turismo/trompa del diablo/WP_20181012_021.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/trompa del diablo/WP_20181012_021.jpg"></a>
+                                <a href="img/turismo/trompa del diablo/WP_20181012_022.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/trompa del diablo/WP_20181012_022.jpg"></a>
+                                <a href="img/turismo/trompa del diablo/WP_20181012_047.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/trompa del diablo/WP_20181012_047.jpg"></a>
+                                <a href="img/turismo/trompa del diablo/WP_20181012_050.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/trompa del diablo/WP_20181012_050.jpg"></a>
+                                <a href="img/turismo/trompa del diablo/WP_20181012_053.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/trompa del diablo/WP_20181012_053.jpg"></a>
+                                <a href="img/turismo/trompa del diablo/WP_20181012_054.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/trompa del diablo/WP_20181012_054.jpg"></a>
+                                <a href="img/turismo/trompa del diablo/WP_20181012_055.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/trompa del diablo/WP_20181012_055.jpg"></a>
+                                <a href="img/turismo/trompa del diablo/WP_20181012_058.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/trompa del diablo/WP_20181012_058.jpg"></a>
+                                <a href="img/turismo/trompa del diablo/WP_20181012_14_27_30_Panorama.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/trompa del diablo/WP_20181012_14_27_30_Panorama.jpg"></a>
+                            </section>
                         </div>
                     </div>
                 </div>
@@ -248,11 +289,21 @@
             <div class="col text-center" id="contenido_turismo9">
                 <img src="img/turismo/fundacionSC.jpg" alt="" class="img-fluid mb-3">
                 <div class="row">
-                    <div class="col">
+                    <div class="col tarjeta1">
                         <div class="galery_container row d-flex justify-content-center">
 
-                            <img src="img/turismo/zona de camping fundacion san cipriano/IMG-20181117-WA0030.jpg" alt=""
-                                srcset="" class="img_adaptada lazy">
+                            <section data-featherlight-gallery data-featherlight-filter="a">
+                                <a href="img/turismo/zona de camping fundacion san cipriano/IMG-20181117-WA0030.jpg"><img
+                                        class="img_adaptada lazy" src="img/turismo/zona de camping fundacion san cipriano/IMG-20181117-WA0030.jpg"></a>
+                                <a href="img/turismo/zona de camping fundacion san cipriano/WP_20181122_025.jpg"><img
+                                        class="img_adaptada lazy" src="img/turismo/zona de camping fundacion san cipriano/WP_20181122_025.jpg"></a>
+                                <a href="img/turismo/zona de camping fundacion san cipriano/WP_20181122_026.jpg"><img
+                                        class="img_adaptada lazy" src="img/turismo/zona de camping fundacion san cipriano/WP_20181122_026.jpg"></a>
+                                <a href="img/turismo/zona de camping fundacion san cipriano/WP_20181122_027.jpg"><img
+                                        class="img_adaptada lazy" src="img/turismo/zona de camping fundacion san cipriano/WP_20181122_027.jpg"></a>
+                                <a href="img/turismo/zona de camping fundacion san cipriano/WP_20181122_028.jpg"><img
+                                        class="img_adaptada lazy" src="img/turismo/zona de camping fundacion san cipriano/WP_20181122_028.jpg"></a>
+                            </section>
 
                         </div>
                     </div>
@@ -323,17 +374,11 @@
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script src="js/featherlight.min.js"></script>
     <script src="js/parallax.js"></script>
+    <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript"
+        charset="utf-8"></script>
+    <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript"
+        charset="utf-8"></script>
     <script src="js/app.js"></script>
-
-    <script>
-        inView('.galery_container').once('enter', function () {
-            $('.lazy').lazy({
-                placeholder: "data:img/load.gif;",
-                threshold: 0,
-                visibleOnly: true
-            });
-        });
-    </script>
 
 </body>
 
