--- a/alianzas.html
+++ b/alianzas.html
@@ -744,7 +744,8 @@
         <div class="arte col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/alianza/Sazon de Doña Dioni/1.jpg" data-featherlight="image"><img class="cabecita img-fluid" src="img/alianza/Sazon de Doña Dioni/1.jpg"></a>
+              <a href="img/alianza/Sazon de Doña Dioni/1.jpg" data-featherlight="image"><img class="cabecita img-fluid"
+                  src="img/alianza/Sazon de Doña Dioni/1.jpg"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -1522,7 +1523,7 @@
       </div>
     </div>
 
-    
+
   </section>
 
   <!-- Footer  -->
@@ -1565,21 +1566,6 @@
   <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript"
     charset="utf-8"></script>
   <script src="js/app.js"></script>
-
-  <script>
-    $('a.gallery').featherlightGallery({
-      previousIcon: '«',
-      nextIcon: '»',
-      galleryFadeIn: 300,
-
-      openSpeed: 300
-    });
-
-    inView('#exampleModal').on('enter', function () {
-      console.log("hola");
-    });
-
-  </script>
 
 </body>
 
