--- a/gastronomia.html
+++ b/gastronomia.html
@@ -12,6 +12,8 @@
 
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/timeline.css">
+    <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
+    <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.min.js"></script>
 </head>
@@ -145,14 +147,16 @@
             <div class="container-fluid pl-0 pr-0">
                 <div class="galery_container row d-flex justify-content-center">
 
-                    <img src="img/gastronomia/IMG-20181120-WA0008.jpg" alt="" srcset="" class="img_adaptada lazy">
-                    <img src="img/gastronomia/IMG_20180916_125145.jpg" alt="" srcset="" class="img_adaptada lazy">
-                    <img src="img/gastronomia/IMG-20181120-WA0010.jpg" alt="" srcset="" class="img_adaptada lazy">
-                    <img src="img/gastronomia/IMG_20180916_125205.jpg" alt="" srcset="" class="img_adaptada lazy">
-                    <img src="img/gastronomia/WP_20140521_069.jpg" alt="" srcset="" class="img_adaptada lazy">
-                    <img src="img/gastronomia/WP_20140521_062.jpg" alt="" srcset="" class="img_adaptada lazy">
-                    <img src="img/gastronomia/WP_20140521_088.jpg" alt="" srcset="" class="img_adaptada lazy">
+                    <section data-featherlight-gallery data-featherlight-filter="a">
+                        <a href="img/gastronomia/IMG-20181120-WA0008.jpg"><img class="img_adaptada lazy" src="img/gastronomia/IMG-20181120-WA0008.jpg"></a>
+                        <a href="img/gastronomia/IMG_20180916_125145.jpg"><img class="img_adaptada lazy" src="img/gastronomia/IMG_20180916_125145.jpg"></a>
+                        <a href="img/gastronomia/IMG-20181120-WA0010.jpg"><img class="img_adaptada lazy" src="img/gastronomia/IMG-20181120-WA0010.jpg"></a>
+                        <a href="img/gastronomia/IMG_20180916_125205.jpg"><img class="img_adaptada lazy" src="img/gastronomia/IMG_20180916_125205.jpg"></a>
+                        <a href="img/gastronomia/WP_20140521_069.jpg"><img class="img_adaptada lazy" src="img/gastronomia/WP_20140521_069.jpg"></a>
+                        <a href="img/gastronomia/WP_20140521_062.jpg"><img class="img_adaptada lazy" src="img/gastronomia/WP_20140521_062.jpg"></a>
+                        <a href="img/gastronomia/WP_20140521_088.jpg"><img class="img_adaptada lazy" src="img/gastronomia/WP_20140521_088.jpg"></a>
 
+                    </section>
                 </div>
             </div>
         </section>
@@ -191,16 +195,10 @@
     <script src="js/in-view.min.js"></script>
     <script src="js/jquery.lazy.min.js"></script>
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript"
+        charset="utf-8"></script>
+    <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript"
+        charset="utf-8"></script>
     <script src="js/app.js"></script>
-
-    <script>
-        inView('.galery_container').once('enter', function () {
-            $('.lazy').lazy({
-                placeholder: "data:img/load.gif;",
-                threshold: 0,
-                visibleOnly: true
-            });
-        });
-    </script>
 
 </body>
